--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
         <li class="list-item">
             <input type="checkbox"><label class="task">Pay Bills</label>
             <input type="text" class="task"><button class="btn edit">Edit</button>
-            <button class="btn  delete"><img src="./remove.svg"></button></li>
+            <button class="btn  delete"><img src="./remove.svg" class="image-delete"></button></li>
         <li class="list-item edit-mode">
             <input type="checkbox"><label class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task"><button class="btn edit">Save</button>
-            <button class="btn delete"><img src="./remove.svg"></button></li>
+            <button class="btn delete"><img src="./remove.svg" class="image-delete"></button></li>
       </ul>
       <h3 class="title">Completed</h3>
       <ul class = "list-container" id="completed-tasks">
         <li  class="list-item" >
             <input type="checkbox" checked><label class="task">See the Doctor</label>
             <input type="text" class="task"><button class=" btn edit">Edit</button>
-            <button class="btn delete"><img src="./remove.svg"></button>
+            <button class="btn delete"><img src="./remove.svg" class="image-delete"></button>
         </li>
       </ul>
     </div>
