refact: fix tags selector. Rule 3.4. Part 4

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="btn delete"><img src="./remove.svg" class="image-delete"></button></li>
       </ul>
       <h3 class="title">Completed</h3>
-      <ul class = "list-container" id="completed-tasks">
+      <ul class = "list-container completed-tasks-container" id="completed-tasks">
         <li  class="list-item" >
             <input type="checkbox" checked><label class="task">See the Doctor</label>
             <input type="text" class="task"><button class=" btn edit">Edit</button>
