--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="aaa">
+    <div class="header">
         <img src="./eisenhower-matrix.jpg"  class="image">
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
+    <div class="main-container">
       <p id="top-section-for-adding-element-to-list">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
