--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main-container">
-      <p id="top-section-for-adding-element-to-list">
+      <p id="add-task-section">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text"><button class="btn">Add</button>
