--- a/index.html
+++ b/index.html
@@ -6,37 +6,41 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="header">
+    <header class="header">
         <img src="./eisenhower-matrix.jpg"  class="image">
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main-container">
-      <p id="add-task-section">
+    </header>
+    <main class="main-container">
+      <section id="add-task-section">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text"><button class="btn">Add</button>
         </div>
-      </p>
-      <h3 class="title">Todo</h3>
-      <ul class = "list-container" id="incomplete-tasks">
-        <li class="list-item">
-            <input type="checkbox"><label class="task">Pay Bills</label>
-            <input type="text" class="task"><button class="btn edit">Edit</button>
-            <button class="btn  delete"><img src="./remove.svg" class="image-delete"></button></li>
-        <li class="list-item edit-mode">
-            <input type="checkbox"><label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task"><button class="btn edit">Save</button>
-            <button class="btn delete"><img src="./remove.svg" class="image-delete"></button></li>
-      </ul>
-      <h3 class="title">Completed</h3>
-      <ul class = "list-container completed-tasks-container" id="completed-tasks">
-        <li  class="list-item" >
-            <input type="checkbox" checked><label class="task">See the Doctor</label>
-            <input type="text" class="task"><button class=" btn edit">Edit</button>
-            <button class="btn delete"><img src="./remove.svg" class="image-delete"></button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section>
+        <h3 class="title">Todo</h3>
+        <ul class = "list-container" id="incomplete-tasks">
+          <li class="list-item">
+              <input type="checkbox"><label class="task">Pay Bills</label>
+              <input type="text" class="task"><button class="btn edit">Edit</button>
+              <button class="btn  delete"><img src="./remove.svg" class="image-delete"></button></li>
+          <li class="list-item edit-mode">
+              <input type="checkbox"><label class="task">Go Shopping</label>
+              <input type="text" value="Go Shopping" class="task"><button class="btn edit">Save</button>
+              <button class="btn delete"><img src="./remove.svg" class="image-delete"></button></li>
+        </ul>
+      </section>
+      <section>
+        <h3 class="title">Completed</h3>
+        <ul class = "list-container completed-tasks-container" id="completed-tasks">
+          <li  class="list-item" >
+              <input type="checkbox" checked><label class="task">See the Doctor</label>
+              <input type="text" class="task"><button class=" btn edit">Edit</button>
+              <button class="btn delete"><img src="./remove.svg" class="image-delete"></button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
