--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page">
     <header class="header">
-        <img src="./eisenhower-matrix.jpg"  class="image">
+        <img src="./eisenhower-matrix.jpg"  class="image" alt="header-image">
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main-container">
@@ -23,11 +23,11 @@
           <li class="list-item">
               <input type="checkbox"><label class="task">Pay Bills</label>
               <input type="text" class="task"><button class="btn edit">Edit</button>
-              <button class="btn  delete"><img src="./remove.svg" class="image-delete"></button></li>
+              <button class="btn  delete"><img src="./remove.svg" class="image-delete" alt="remove-image"></button></li>
           <li class="list-item edit-mode">
               <input type="checkbox"><label class="task">Go Shopping</label>
               <input type="text" value="Go Shopping" class="task"><button class="btn edit">Save</button>
-              <button class="btn delete"><img src="./remove.svg" class="image-delete"></button></li>
+              <button class="btn delete"><img src="./remove.svg" class="image-delete" alt="remove-image"></button></li>
         </ul>
       </section>
       <section>
@@ -36,7 +36,7 @@
           <li  class="list-item" >
               <input type="checkbox" checked><label class="task">See the Doctor</label>
               <input type="text" class="task"><button class=" btn edit">Edit</button>
-              <button class="btn delete"><img src="./remove.svg" class="image-delete"></button>
+              <button class="btn delete"><img src="./remove.svg" class="image-delete" alt="remove-image"></button>
           </li>
         </ul>
       </section>
