--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body class="page">
     <header class="header">
-        <img src="./eisenhower-matrix.jpg"  class="image" alt="header-image">
-        <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+        <img src="./eisenhower-matrix.jpg"  class="header__image" alt="header-image">
+        <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main-container">
       <section id="add-task-section">
