--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </header>
     <main class="main-container">
       <section id="add-task-section">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <h3 class="title">Add Item</h3>
+        <div class="add-task__wrapper">
           <input id="new-task" class="task" type="text"><button class="btn">Add</button>
         </div>
       </section>
