--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main-container">
-      <section id="add-task-section">
+      <section class="add-task">
         <h3 class="title">Add Item</h3>
         <div class="add-task__wrapper">
           <input id="new-task" class="task" type="text"><button class="btn">Add</button>
